<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudApp</string>
    <string name="action_settings">Settings</string>
    
    <string name="login_title">CloudApp Log In</string>
    <string name="login_username_title">Email</string>
    <string name="login_username_hint">email@example.com</string>
    <string name="login_password_title">Password</string>
    <string name="login_password_hint"></string>
    <string name="login_button">Log In</string>
    <string name="login_failed_title">Login failed</string>
    <string name="login_failed">Your email or password is wrong.</string>
    
    <string name="main_title">Recent Drops</string>
    <string name="main_ui_new_drop">New Drop</string>
    <string name="main_ui_donate">Donate</string>
    <string name="main_ui_log_out">Log Out</string>
    <string name="main_ui_settings">Settings</string>
    <string name="main_ui_mode_grid">Grid</string>
    <string name="main_ui_mode_list">List</string>
    <string name="main_ui_btn_delete">Delete</string>
    <string name="main_ui_ctx_download">Download</string>
    <string name="main_ui_ctx_view">View in Browser</string>
    <string name="main_ui_ctx_copy">Copy Link</string>
    <string name="main_ui_ctx_delete">Delete</string>
    <string name="main_ui_ctx_recover">Recover</string>
    <string name="main_ui_ctx_rename">Rename</string>
    <string name="main_ui_ctx_edit">Change Security</string>
    <string name="main_ui_message_copied">Copied to clipboard</string>
    <string name="main_ui_message_not_copied">Error, not copied</string>
    <string name="main_ui_message_rename">Rename {file_name} to</string>
    <string name="main_ui_rename_hint">New name</string>
    <string name="main_slider_library">Library</string>
    <string name="main_slider_all">All</string>
    <string name="main_slider_popular">Popular</string>
    <string name="main_slider_image">Images</string>
    <string name="main_slider_bookmark">Bookmarks</string>
    <string name="main_slider_text">Text</string>
    <string name="main_slider_archive">Archives</string>
    <string name="main_slider_audio">Audio</string>
    <string name="main_slider_video">Video</string>
    <string name="main_slider_unknown">Other</string>
    <string name="main_slider_trash">Trash</string>
    
    <string name="new_drop_title">New Drop</string>
    <string name="new_drop_title_file">Upload File</string>
    <string name="new_drop_title_bookmark">Add Bookmark</string>
    <string name="new_drop_ui_new_bookmark">Bookmark link:</string>
    <string name="new_drop_ui_new_bookmark_name_hint">CloudApp</string>
    <string name="new_drop_ui_new_bookmark_hint">http://getcloudapp.com</string>
    <string name="new_drop_ui_name_text_file">Uploading text as</string>
    
    <string name="item_title">Info</string>
    <string name="item_thumb_desc">Info</string>
    <string name="item_ui_detail_inds">Name\nType\nUploaded\nViews\nRedirect Url\nSource\nPrivacy\nDeleted</string>
    
    <string name="donate_title">Donate</string>
    <string name="donate_ui_donate">donate</string>
    <string name="donate_thanks">Thank you so much for donating!  I really do appreciate it.</string>
    
    <string name="ui_loading">Loading...</string>
    <string name="ui_confirm">Confirm</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_close">Close</string>
    <string name="ui_more">More</string>
    <string name="ui_yes">Yes</string>
    <string name="ui_no">No</string>
    <string name="ui_ok">Okay</string>
    
    <string name="title_activity_main">My CloudApp</string>
    <string name="hello_world">Hello world!</string>

</resources>