<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
    	android:layout_marginBottom="12dp"
        android:padding="6dp"
        android:background="@drawable/bg_toolbar" >
            
      	<RadioButton
   	    	android:id="@+id/button_delete"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:paddingTop="5dp"
      	    android:paddingRight="10dp"
      	    android:paddingBottom="5dp"
      	    android:paddingLeft="10dp"
      	    android:background="@drawable/bg_button_selector"
      	    android:button="@android:color/transparent"
      	    android:visibility="gone"
      	    android:textColor="#FF707070"
      	    android:text="@string/main_ui_btn_delete" />
        
        <RadioGroup
       	    android:id="@+id/view_mode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:orientation="horizontal" >
            
        	<RadioButton
       	    	android:id="@+id/view_mode_grid"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:paddingTop="5dp"
        	    android:paddingRight="10dp"
        	    android:paddingBottom="5dp"
        	    android:paddingLeft="10dp"
        	    android:background="@drawable/bg_button_left_selector"
        	    android:button="@android:color/transparent"
        	    android:enabled="false"
        	    android:textColor="#FF707070"
        	    android:text="@string/main_ui_mode_grid" />
            
        	<RadioButton
       	    	android:id="@+id/view_mode_list"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:paddingTop="5dp"
        	    android:paddingRight="10dp"
        	    android:paddingBottom="5dp"
        	    android:paddingLeft="10dp"
        	    android:button="@android:color/transparent"
        	    android:background="@drawable/bg_button_right_selector"
        	    android:textColor="#FF707070"
        	    android:text="@string/main_ui_mode_list" />
            
        </RadioGroup>
        
    </RelativeLayout>
    
    <ViewSwitcher
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/toolbar" >
        
        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/data_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
	        android:fadingEdge="vertical"
	        android:fastScrollEnabled="false"
	        android:footerDividersEnabled="false"
	        android:headerDividersEnabled="false"
	        android:smoothScrollbar="true" />
        
		<GridView
		    android:id="@+id/data_grid_view"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:scrollbars="vertical"
		    android:columnCount="4"
		    android:padding="2dp"
		    android:verticalSpacing="2dp"
		    android:horizontalSpacing="2dp" />
        
    </ViewSwitcher>

</RelativeLayout>